portfoliocss.css
/*******************************
	Header/Navbar
*******************************/
body {
	background-color: D3E7F0;
	margin: 0;
}

#header {
	height: 45%;
	width: 100%;
	background-image: url("headerimg.jpg");
	background-size: 100% 100%;
	margin-right: auto;
	margin-left: auto;
	text-align: center;
	color: white;

}

#navbar {
	
	
	background-color: white;
	text-align: center;
	margin: auto;
	width:50%;


}

#navbar ul {
	color: white;
display: inline-block;


}


#navbar li {
	
	margin-top: -30px;
	list-style-type: none;
	padding-right: 100px;
	padding-top: 40px;
	font-family: arial;
	float:left;
	color: white;

}

#container {
	text-align: center;
	font-family: 'Architects Daughter', cursive;
	font-size: 1.2em;
	width: 100%;
	
}

#footer {
	margin: 0 auto;
	height: 10%;
	width: 100%;
	background-color: black ;
	margin-top: 50px;
	
}

#aboutMe {
	width: 100%;
	text-align: center;
	padding-bottom: 15px;
}

#farmingdale {
	
	width:90%;
	margin: auto;
	background-image: url("farmingdale.jpg");
	background-size: 100%;
	text-align: center;
	overflow: hidden;

}

#me {
	margin-top: 100px;
	margin-bottom: 100px;
}


#majorinfo {
	opacity: .8;
	
	
	width:50%;
	border-style: solid;
	border-color: black;
	background-color:black;
	margin: 0 auto;

}

#graduationFont {
	font-style: italic;
}

#skills {
	height: 675px;
	width:100%;
	background-color: 1BB7FA;
	overflow: hidden;
}

#mainskills img {
	width: 350px;
	height: 200px;
}

#familiarskills img {
	width: 200px;
	height: 200px;
	padding-left: 10px;
}

#skillinfo {
	width: 50%;
	margin: auto;
}

#projects {
	height:425px;
	width:100%;
	position: relative;
	
}

#landscape {
	width:300px;
	height:300px;
	float:right;
	margin-right: 275px;
}

#blackjack {
	width:300px;
	height:300px;
	float: left;
	margin-left: 275px;
}

.projectImages {
	width:200px;
	height:200px;
	border-style: solid;
    border-width: 5px;
}

#contact {
	height:300px;
	width:100%;
	background-color: 1BB7FA;
}

.fontWhite {
	color:white;
}

#github {
	position:absolute; 
	bottom:0;
	left: 33%;
}


a {
	text-decoration: none;

}

/* unvisited link */
a:link {
    color: black;
}

/* visited link */
a:visited {
    color:#4C3D1F;
}

/* mouse over link */
a:hover {
    opacity: .5;
}

/* selected link */
a:active {
    color: #0000FF;
}

